# trading_system

./: .gitignore  README.md  main.py  pyproject.toml  test_trading_system.db
.trunk/: trunk.yaml
data/: ticker.xlsx  tickers.yml
notebooks/: Strat_test.ipynb  Untiteled.ipynb  bollinger_bands_kcr.py  debug_grachx.py  hyperparameter_tuning.ipynb  hyperparameter_tuning_advanced.ipynb  hyperparameter_tuning_breakout.ipynb  hyperparameter_tuning_mean_reversion.ipynb  hyperparameter_tuning_momentum.ipynb  hyperparameter_tuning_trend.ipynb  hyperparameter_tuning_volatality.ipynb  hyperparameter_tuning_volatility.ipynb  interim_debug_sript.py  optimization_artefact_ATRTrailingStops_bestparams.json  optimization_artefact_AroonStrategy_bestparams.json  optimization_artefact_BollingerBandsStrategy_bestparams.json  optimization_artefact_CCIStrategy_bestparams.json  optimization_artefact_ChoppinessIndexStrategy_bestparams.json  optimization_artefact_CupAndHandle_bestparams.json  optimization_artefact_CupAndHandle_param_history.csv  optimization_artefact_CupAndHandle_portfolio_performance.csv  optimization_artefact_DisparityIndexStrategy_bestparams.json  optimization_artefact_DonchianChannel_bestparams.json  optimization_artefact_EnhancedMarketPressureStrategy_bestparams.json  optimization_artefact_GARCHModel_bestparams.json  optimization_artefact_IchimokuCloud_bestparams.json  optimization_artefact_KeltnerChannelStrategy_bestparams.json  optimization_artefact_MACDStrategy_bestparams.json  optimization_artefact_ParabolicSAR_bestparams.json  pairs_trading_deep_strat.py  (+7 more)
(+197 files in other folders)
