[tool.poetry]
name = "trading-system"
version = "0.1.0"
description = ""
authors = ["Vignesh Pai B H"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.51"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.37"
tenacity = "^9.0.0"
pytest = "^8.3.4"
pandas-ta = "^0.3.14b0"
numba = "^0.61.0"
joblib = "^1.4.2"
scipy = "^1.15.2"
arch = "^7.2.0"
hyperopt = "^0.2.7"
prophet = "^1.1.6"
mlflow = "^2.20.4"
hmmlearn = "^0.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
